2005-04-07  Stipe Tolj  <stolj@wapme.de> 
    * gwlib/http.c: fixing bug #213 breaking HTTP response handling when there
      has been a response header 'Content-Length: 0' given. Thanks to Jonathan
      for this report and provding also a patch for the problem.
      [Msg-Id: <42541321.2080102@wirelessonenet.com>]

2005-04-01  Stipe Tolj  <stolj@wapme.de> 
    * test/wapproxy.c: added option -p for UDP port of wapproxy to list to.
      Can be used to proxy WDP packets on the same machine/interface. 

2005-03-29  Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed horrible bug in 'http_cgivar_dump' that
      used 'gwlist_extract_first' instead of 'gwlist_get'.

2005-03-28  Alexander Malysh <amalysh at kannel.org>
    * gwlib/dbpool.h: fixed compiler warnings.

2005-03-22  Stipe Tolj  <stolj@wapme.de> 
    * wmlscript/wsstdlib.[ch]: updated and added latest WTAI functions as 
      defined in WAP-268-WTAI, WAP-269-WTAIIS136, WAP-270-WTAIPDC, 
      WAP-228-WTAIIS95-20010908 and WAP-255-WTAIGSM. Thanks to Dermot Wrycraft
      <Dermot.Wrycraft@magdalene.co.uk> for providing the hint for update.
    
2005-03-21  Stipe Tolj  <stolj@wapme.de> 
    * gwlib/octstr.{ch]: adding octstr_str_case_compare() to allow insensitive
      string compare with const char. Patch by Fred <fred@5thfinger.com>.
      [Msg-Id: <020f01c51acf$98f1c0e0$0401a8c0@FRED4>]
      
2005-03-21  Stipe Tolj  <stolj@wapme.de> 
    * gwlib/http.c: fixing server and client thread state variables in order to 
      make modules usable in other code where http_init() and http_shutdown()
      is called several times. Thanks to Paul for pointing to this.
      [Msg-Id: <F808656A265C82458A21CCA505A2B12E3E3B87@MACKEN.anam.com>]

2005-03-17  Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: applied patch that implements relaxed source_addr
      checks in SMPP and adds additionally error reporting why kannel rejected
      this MO.